--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,13 @@
 org.gradle.daemon=false
 org.gradle.debug=false
 
-minecraft_version=1.20.5
-minecraft_version_range=[1.20.5,1.21)
-neo_version=20.5.6-beta
-neo_version_range=[20.5,)
+neogradle.subsystems.parchment.minecraftVersion=1.20.4
+neogradle.subsystems.parchment.mappingsVersion=2024.04.14
+
+minecraft_version=1.20.6
+minecraft_version_range=[1.20.6,1.21)
+neo_version=20.6.7-beta
+neo_version_range=[20.6,)
 loader_version_range=[2,)
 
 mod_id=chemlib
